Fix Background Picture - responsive on mobile

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -82,7 +82,8 @@ $accent-hover: #034cc1; //#32018f;
 }
 
 html {
-  height: 100%;
+  min-height: 100%;
+  padding-bottom: 70px;
 }
 
 body {
